# Py16-web-hw09

./: pyproject.toml
Conspect/: conspect_lxml.py  conspect_parser.py  conspect_project.py
Conspect/infowar/: dead_lapties.json
Conspect/infowar/infowar/spiders/: get_losses.py
HomeWork/BS4/: authors.json  insert_collection.py  models.py  toscrape_parser_bs4.py
HomeWork/Scrapy/: scrapy_singleton.py
Lessons/BS4/: dead_larties.json  parser_lapties.py
Lessons/Playwright/: data_parse.json  playwright_parser.py
Lessons/Scrapy/: authors.json  scrapy_singleton.py
Lessons/Selenium/: selenium_chrome.py  selenium_firefox.py
